--- a/Organizer/App.axaml
+++ b/Organizer/App.axaml
@@ -7,6 +7,7 @@
     </Application.DataTemplates>
 
     <Application.Styles>
-        <FluentTheme Mode="Light"/>
+        <StyleInclude Source="avares://Citrus.Avalonia/Sea.xaml"/>
+        <!--<FluentTheme Mode="Light"/>-->
     </Application.Styles>
 </Application>
