--- a/Organizer/Views/AboutView.axaml
+++ b/Organizer/Views/AboutView.axaml
@@ -2,7 +2,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:vm="using:Organizer.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Organizer.Views.About">
-  Welcome to Avalonia!
+    
+       <UserControl.DataContext>
+            <vm:AboutViewModel/>
+       </UserControl.DataContext>
+
+        <TextBlock>Info</TextBlock>
 </UserControl>
