--- a/Organizer/Views/FinanceCalculateView.axaml
+++ b/Organizer/Views/FinanceCalculateView.axaml
@@ -2,7 +2,176 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:vm="using:Organizer.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Organizer.Views.FinanceCalculateView">
-  Welcome to Avalonia!
+
+    <UserControl.DataContext>
+        <vm:FinanceCalculateViewModel/>
+    </UserControl.DataContext>
+
+    <UserControl.Styles>
+        <Style Selector="TextBlock">
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="FontSize" Value="20"/>
+        </Style>
+        <Style Selector="TextBox">
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Setter Property="FontSize" Value="20"/>
+        </Style>
+        <Style Selector="Button">
+            <Setter Property="Width" Value="50"/>
+            <Setter Property="ToolTip.Tip" Value="Зафиксировать"/>
+        </Style>
+    </UserControl.Styles>
+
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+
+        <TextBlock Grid.Column="5" Grid.ColumnSpan="4" Grid.Row="0"
+                   FontSize="33" HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   Text="{Binding NowTime}"></TextBlock>
+
+        <TextBlock Grid.Column="1" Grid.Row="2">test1</TextBlock>
+        <TextBox  Grid.Column="2" Grid.Row="2"
+                  Text="{Binding Eat}"></TextBox>
+        <Button Grid.Column="3" Grid.Row="2" 
+                Command="{Binding SumEatCommand}">✓</Button>
+        <TextBlock  Grid.Column="5" Grid.Row="2" 
+                    Text="{Binding Res1}"></TextBlock>
+
+        <TextBlock Grid.Column="1" Grid.Row="4">test2</TextBlock>
+        <TextBox  Grid.Column="2" Grid.Row="4"
+                  Text="{Binding Transport}"></TextBox>
+        <Button Grid.Column="3" Grid.Row="4"
+                Command="{Binding SumTransportCommand}">✓</Button>
+        <TextBlock  Grid.Column="5" Grid.Row="4"
+                    Text="{Binding Res2}"></TextBlock>
+
+        <TextBlock Grid.Column="1" Grid.Row="6">test3</TextBlock>
+        <TextBox  Grid.Column="2" Grid.Row="6"
+                  Text="{Binding Home}"></TextBox>
+        <Button Grid.Column="3" Grid.Row="6"
+                Command="{Binding SumHomeCommand}">✓</Button>
+        <TextBlock  Grid.Column="5" Grid.Row="6"
+                    Text="{Binding Res3}"></TextBlock>
+
+        <TextBlock Grid.Column="1" Grid.Row="8">test4</TextBlock>
+        <TextBox  Grid.Column="2" Grid.Row="8"
+                  Text="{Binding Services}"></TextBox>
+        <Button Grid.Column="3" Grid.Row="8"
+                Command="{Binding SumServicesCommand}">✓</Button>
+        <TextBlock  Grid.Column="5" Grid.Row="8"
+                    Text="{Binding Res4}"></TextBlock>
+
+        <TextBlock Grid.Column="1" Grid.Row="10">test5</TextBlock>
+        <TextBox  Grid.Column="2" Grid.Row="10"
+                  Text="{Binding Relaxation}"></TextBox>
+        <Button Grid.Column="3" Grid.Row="10"
+                Command="{Binding SumRelaxationCommand}">✓</Button>
+        <TextBlock  Grid.Column="5" Grid.Row="10"
+                    Text="{Binding Res5}"></TextBlock>
+
+
+        <TextBlock Grid.Column="8" Grid.Row="2">test1</TextBlock>
+        <TextBox  Grid.Column="9" Grid.Row="2"
+                  Text="{Binding Eat}"></TextBox>
+        <Button Grid.Column="10" Grid.Row="2"
+                Command="{Binding SumEatCommand}">✓</Button>
+        <TextBlock  Grid.Column="12" Grid.Row="2"
+                    Text="{Binding Res1}"></TextBlock>
+
+        <TextBlock Grid.Column="8" Grid.Row="4">test2</TextBlock>
+        <TextBox  Grid.Column="9" Grid.Row="4"
+                  Text="{Binding Transport}"></TextBox>
+        <Button Grid.Column="10" Grid.Row="4"
+                Command="{Binding SumTransportCommand}">✓</Button>
+        <TextBlock  Grid.Column="12" Grid.Row="4"
+                    Text="{Binding Res2}"></TextBlock>
+
+        <TextBlock Grid.Column="8" Grid.Row="6">test3</TextBlock>
+        <TextBox  Grid.Column="9" Grid.Row="6"
+                  Text="{Binding Home}"></TextBox>
+        <Button Grid.Column="10" Grid.Row="6"
+                Command="{Binding SumHomeCommand}">✓</Button>
+        <TextBlock  Grid.Column="12" Grid.Row="6"
+                    Text="{Binding Res3}"></TextBlock>
+
+        <TextBlock Grid.Column="8" Grid.Row="8">test4</TextBlock>
+        <TextBox  Grid.Column="9" Grid.Row="8"
+                  Text="{Binding Services}"></TextBox>
+        <Button Grid.Column="10" Grid.Row="8"
+                Command="{Binding SumServicesCommand}">✓</Button>
+        <TextBlock  Grid.Column="12" Grid.Row="8"
+                    Text="{Binding Res4}"></TextBlock>
+
+        <TextBlock Grid.Column="8" Grid.Row="10">test5</TextBlock>
+        <TextBox  Grid.Column="9" Grid.Row="10"
+                  Text="{Binding Relaxation}"></TextBox>
+        <Button Grid.Column="10" Grid.Row="10"
+                Command="{Binding SumRelaxationCommand}">✓</Button>
+        <TextBlock  Grid.Column="12" Grid.Row="10"
+                    Text="{Binding Res5}"></TextBlock>
+
+        <TextBlock Grid.Column="4" Grid.Row="12"
+                   FontSize="20" VerticalAlignment="Center">Итогo:</TextBlock>
+
+        <TextBlock Grid.Column="9" Grid.Row="12"
+                   Text="{Binding TotalMoney}"></TextBlock>
+
+        <Button  Grid.Column="5" Grid.ColumnSpan="2" Grid.Row="14"
+                 FontSize="17"
+                 Width="110" ToolTip.Tip="Очистить все поля"
+                 VerticalAlignment="Center"
+                 HorizontalAlignment="Center"
+                 Command="{Binding ClearDataCommand}"
+                 Content="Сбросить"/>
+
+        <Button Grid.Column="7" Grid.ColumnSpan="2" Grid.Row="14"
+                FontSize="17"
+                Width="110" ToolTip.Tip="Сохранить данные в таблицу"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Center"
+                Command="{Binding SaveDatasCommand}"
+                Content="Сохранить"/>
+
+    </Grid>
+
 </UserControl>
