--- a/Organizer/Views/MainWindow.axaml
+++ b/Organizer/Views/MainWindow.axaml
@@ -4,26 +4,25 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="using:Organizer.Views"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d" d:DesignWidth="900" d:DesignHeight="600"
         x:Class="Organizer.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="Organizer">
 
-    <Design.DataContext>
+     <Design.DataContext>
         <vm:MainWindowViewModel/>
     </Design.DataContext>
 
 
     <TabControl HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
         <TabItem Header="Расчет финансов">
-            <views:FinanceCalc/>
+            <views:FinanceCalculateView/>
         </TabItem>
         <TabItem Header="История">
-            <views:History/>
+            <views:HistoryView/>
         </TabItem>
         <TabItem Header="О программе">
             <views:About/>
         </TabItem>
     </TabControl>
-
 </Window>
