--- a/Organizer/Views/FinanceCalculateView.axaml
+++ b/Organizer/Views/FinanceCalculateView.axaml
@@ -6,9 +6,9 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Organizer.Views.FinanceCalculateView">
 
-    <UserControl.DataContext>
+    <!--<UserControl.DataContext>
         <vm:FinanceCalculateViewModel/>
-    </UserControl.DataContext>
+    </UserControl.DataContext>-->
 
     <UserControl.Styles>
         <Style Selector="TextBlock">
