--- a/Organizer/Views/FinanceCalculateView.axaml
+++ b/Organizer/Views/FinanceCalculateView.axaml
@@ -3,7 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="using:Organizer.ViewModels"
-             xmlns:oxy="clr-namespace:OxyPlot.Avalonia;assembly=OxyPlot.Avalonia"
+             xmlns:ScottPlot="clr-namespace:ScottPlot.Avalonia;assembly=ScottPlot.Avalonia"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Organizer.Views.FinanceCalculateView">
 
@@ -78,7 +78,7 @@
         <Button Grid.Column="3" Grid.Row="2" 
                 Command="{Binding SumEatCommand}">✓</Button>
         <TextBlock  Grid.Column="5" Grid.Row="2" 
-                    Text="{Binding Res1}"></TextBlock>
+                    Text="{Binding ResEat}"></TextBlock>
 
         <TextBlock Grid.Column="1" Grid.Row="4">test2</TextBlock>
         <TextBox  Grid.Column="2" Grid.Row="4"
@@ -86,7 +86,7 @@
         <Button Grid.Column="3" Grid.Row="4"
                 Command="{Binding SumTransportCommand}">✓</Button>
         <TextBlock  Grid.Column="5" Grid.Row="4"
-                    Text="{Binding Res2}"></TextBlock>
+                    Text="{Binding ResTransport}"></TextBlock>
 
         <TextBlock Grid.Column="1" Grid.Row="6">test3</TextBlock>
         <TextBox  Grid.Column="2" Grid.Row="6"
@@ -94,7 +94,7 @@
         <Button Grid.Column="3" Grid.Row="6"
                 Command="{Binding SumHomeCommand}">✓</Button>
         <TextBlock  Grid.Column="5" Grid.Row="6"
-                    Text="{Binding Res3}"></TextBlock>
+                    Text="{Binding ResHome}"></TextBlock>
 
         <TextBlock Grid.Column="1" Grid.Row="8">test4</TextBlock>
         <TextBox  Grid.Column="2" Grid.Row="8"
@@ -102,7 +102,7 @@
         <Button Grid.Column="3" Grid.Row="8"
                 Command="{Binding SumServicesCommand}">✓</Button>
         <TextBlock  Grid.Column="5" Grid.Row="8"
-                    Text="{Binding Res4}"></TextBlock>
+                    Text="{Binding ResServices}"></TextBlock>
 
         <TextBlock Grid.Column="1" Grid.Row="10">test5</TextBlock>
         <TextBox  Grid.Column="2" Grid.Row="10"
@@ -110,7 +110,7 @@
         <Button Grid.Column="3" Grid.Row="10"
                 Command="{Binding SumRelaxationCommand}">✓</Button>
         <TextBlock  Grid.Column="5" Grid.Row="10"
-                    Text="{Binding Res5}"></TextBlock>
+                    Text="{Binding ResRelax}"></TextBlock>
 
         <TextBlock Grid.Column="1" Grid.Row="12">Прочее</TextBlock>
         <TextBox  Grid.Column="2" Grid.Row="12"
@@ -118,7 +118,7 @@
         <Button Grid.Column="3" Grid.Row="12"
                 Command="{Binding SumOtherCommand}">✓</Button>
         <TextBlock  Grid.Column="5" Grid.Row="12"
-                    Text="{Binding Res6}"></TextBlock>
+                    Text="{Binding ResOther}"></TextBlock>
 
 
         <TextBlock Grid.Column="8" Grid.Row="12">Income</TextBlock>
@@ -154,33 +154,9 @@
                 Command="{Binding SaveDatasCommand}"
                 Content="Сохранить"/>
 
-        <!--<TabControl Grid.Column="6" Grid.Row="5" Grid.ColumnSpan="5" Grid.RowSpan="10">
-            <TabItem Header="Binding to PlotModel">
-                <oxy:PlotView Model="{Binding PlotModel}" />
-            </TabItem>
-            <TabItem Header="Define plot in XAML">
-                <oxy:Plot Title="World population by continent">
-                    <oxy:Plot.Series>
-                        <oxy:PieSeries
-                            InnerDiameter="0.2"
-                            ExplodedDistance="0"
-                            Stroke="Black" StrokeThickness="1"
-                            StartAngle="0" AngleSpan="360"
-                            Items="{Binding Continents}"
-                            LabelField="Name" ValueField="PopulationInMillions"
-                            IsExplodedField="IsExploded"
-                            Foreground="BlueViolet"/>
-                    </oxy:Plot.Series>
-                </oxy:Plot>
-            </TabItem>
-        </TabControl>-->
-
-        <!--<oxy:PlotView Grid.Column="6" Grid.Row="6"  VerticalAlignment="Center"
-                HorizontalAlignment="Center"
-                  Grid.RowSpan="5" Grid.ColumnSpan="5"
-             x:Name="plotView"
-             Margin="0,0,7,0"
-             Model="{Binding PlotModel}"/>-->
+        <Image Source="{Binding CurrentImage}" Grid.Row="5" Grid.Column="8"
+               Grid.ColumnSpan="4" Grid.RowSpan="4"
+               Height="650" Width="650"/>
 
     </Grid>
 
