Revert "мелкие косметические исправления"
This reverts commit b3bb666846a556cb59ec478b5e8e9830680f295f.

--- a/Organizer/Views/AboutView.axaml
+++ b/Organizer/Views/AboutView.axaml
@@ -10,9 +10,5 @@
             <vm:AboutViewModel/>
        </UserControl.DataContext>
 
-
-    <StackPanel Orientation="Vertical">
-        <TextBlock>Autor: Artem Skoropisov</TextBlock>
-        <TextBlock>Owner: ArtCorporation</TextBlock>
-    </StackPanel>
+        <TextBlock>Info</TextBlock>
 </UserControl>
