--- a/Organizer/Views/FinanceCalculateView.axaml
+++ b/Organizer/Views/FinanceCalculateView.axaml
@@ -69,7 +69,7 @@
                    VerticalAlignment="Center"
                    Text="{Binding NowTime}"></TextBlock>
 
-        <TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2">Еда и продукты</TextBlock>
+        <TextBlock Grid.Column="1" Grid.Row="2">test1</TextBlock>
         <TextBox  Grid.Column="2" Grid.Row="2"
                   Text="{Binding Eat}"></TextBox>
         <Button Grid.Column="3" Grid.Row="2" 
@@ -77,7 +77,7 @@
         <TextBlock  Grid.Column="5" Grid.Row="2" 
                     Text="{Binding Res1}"></TextBlock>
 
-        <TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="4">Транспорт</TextBlock>
+        <TextBlock Grid.Column="1" Grid.Row="4">test2</TextBlock>
         <TextBox  Grid.Column="2" Grid.Row="4"
                   Text="{Binding Transport}"></TextBox>
         <Button Grid.Column="3" Grid.Row="4"
@@ -85,7 +85,7 @@
         <TextBlock  Grid.Column="5" Grid.Row="4"
                     Text="{Binding Res2}"></TextBlock>
 
-        <TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="6">Жилье</TextBlock>
+        <TextBlock Grid.Column="1" Grid.Row="6">test3</TextBlock>
         <TextBox  Grid.Column="2" Grid.Row="6"
                   Text="{Binding Home}"></TextBox>
         <Button Grid.Column="3" Grid.Row="6"
@@ -93,7 +93,7 @@
         <TextBlock  Grid.Column="5" Grid.Row="6"
                     Text="{Binding Res3}"></TextBlock>
 
-        <TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="8">Услуги</TextBlock>
+        <TextBlock Grid.Column="1" Grid.Row="8">test4</TextBlock>
         <TextBox  Grid.Column="2" Grid.Row="8"
                   Text="{Binding Services}"></TextBox>
         <Button Grid.Column="3" Grid.Row="8"
@@ -101,7 +101,7 @@
         <TextBlock  Grid.Column="5" Grid.Row="8"
                     Text="{Binding Res4}"></TextBlock>
 
-        <TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="10">Отдых</TextBlock>
+        <TextBlock Grid.Column="1" Grid.Row="10">test5</TextBlock>
         <TextBox  Grid.Column="2" Grid.Row="10"
                   Text="{Binding Relaxation}"></TextBox>
         <Button Grid.Column="3" Grid.Row="10"
@@ -142,13 +142,13 @@
         <TextBlock  Grid.Column="12" Grid.Row="8"
                     Text="{Binding Res4}"></TextBlock>
 
-        <TextBlock Grid.Column="8" Grid.Row="10">Другое</TextBlock>
+        <TextBlock Grid.Column="8" Grid.Row="10">test5</TextBlock>
         <TextBox  Grid.Column="9" Grid.Row="10"
-                  Text="{Binding Other}"></TextBox>
+                  Text="{Binding Relaxation}"></TextBox>
         <Button Grid.Column="10" Grid.Row="10"
-                Command="{Binding SumOtherCommand}">✓</Button>
+                Command="{Binding SumRelaxationCommand}">✓</Button>
         <TextBlock  Grid.Column="12" Grid.Row="10"
-                    Text="{Binding Res6}"></TextBlock>
+                    Text="{Binding Res5}"></TextBlock>
 
         <TextBlock Grid.Column="4" Grid.Row="12"
                    FontSize="20" VerticalAlignment="Center">Итогo:</TextBlock>
