--- a/Organizer/Views/MainWindow.axaml
+++ b/Organizer/Views/MainWindow.axaml
@@ -6,7 +6,7 @@
         xmlns:views="using:Organizer.Views"
         mc:Ignorable="d" d:DesignWidth="900" d:DesignHeight="600"
         x:Class="Organizer.Views.MainWindow"
-        Icon="/Assets/avalonia-logo.ico"
+        Icon="/Assets/PigMoney.ico"
         Title="Organizer">
 
      <!--<Design.DataContext>
