--- a/Organizer/Views/SettingsView.axaml
+++ b/Organizer/Views/SettingsView.axaml
@@ -2,13 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:vm="using:Organizer.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="Organizer.Views.AboutView">
-    
-       <!--<UserControl.DataContext>
-            <vm:AboutViewModel/>
-       </UserControl.DataContext>-->
-
-    <TextBlock Text="{Binding Version}" Margin="0,0,0,50"/>
+             x:Class="Organizer.Views.SettingsView">
+  Welcome to Avalonia!
 </UserControl>
