--- a/Organizer/Views/MainWindow.axaml
+++ b/Organizer/Views/MainWindow.axaml
@@ -3,7 +3,7 @@
         xmlns:vm="using:Organizer.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:views="using:Organizer.Views"
+        xmlns:views="using:Organizer.Views.Controlls"
         mc:Ignorable="d" d:DesignWidth="900" d:DesignHeight="600"
         x:Class="Organizer.Views.MainWindow"
         Icon="/Assets/PigMoney.ico"
@@ -14,7 +14,7 @@
     </Design.DataContext>-->
 
 
-    <TabControl HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
+    <!--<TabControl HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
         <TabItem Header="Расчет финансов">
             <views:FinanceCalculateView HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                    DataContext="{Binding FCDataContext}"/>
@@ -27,5 +27,18 @@
             <views:About HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                    DataContext="{Binding AboutDataContext}"/>
         </TabItem>
-    </TabControl>
+    </TabControl>-->
+
+
+    <Grid RowDefinitions="Auto,*">
+
+        <StackPanel VerticalAlignment="Stretch">
+            <views:NavigationTopView DataContext="{Binding NavigationTop}"/>
+        </StackPanel>
+        <ContentControl Grid.Row="1"
+                        Content="{Binding CurrentPage, Mode=OneWay}"/>
+
+    </Grid>
+
+
 </Window>
