--- a/Organizer/Views/FinanceCalculateView.axaml
+++ b/Organizer/Views/FinanceCalculateView.axaml
@@ -14,216 +14,52 @@
     <UserControl.Styles>
         <Style Selector="TextBlock">
             <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
             <Setter Property="FontSize" Value="20"/>
         </Style>
         <Style Selector="TextBox">
-            <Setter Property="VerticalContentAlignment" Value="Center"/>
             <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
             <Setter Property="FontSize" Value="20"/>
         </Style>
         <Style Selector="Button">
-            <Setter Property="Width" Value="40"/>
-            <Setter Property="Height" Value="40"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
             <Setter Property="HorizontalContentAlignment" Value="Center"/>
             <Setter Property="VerticalContentAlignment" Value="Center"/>
             <Setter Property="FontSize" Value="20"/>
-            <Setter Property="ToolTip.Tip" Value="Зафиксировать"/>
         </Style>
     </UserControl.Styles>
 
-    <Grid ShowGridLines="False">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
 
+    <Grid ColumnDefinitions="*,*">
+        <StackPanel Orientation="Vertical" Spacing="20"
+                    Grid.Column="0" HorizontalAlignment="Center"
+                    VerticalAlignment="Center">
 
-        <TextBlock Grid.Column="5" Grid.ColumnSpan="4" Grid.Row="0"
-                   FontSize="33" HorizontalAlignment="Center"
-                   VerticalAlignment="Center"
-                   Text="{Binding NowTime}"></TextBlock>
+            <StackPanel Orientation="Horizontal" Spacing="10"
+                        HorizontalAlignment="Center">
+                <TextBlock Text="Сумма"/>
+                <TextBox Text="{Binding Value}" Width="140"/>
+                <TextBlock Text="руб"/>
+            </StackPanel>
 
-        <TextBlock Grid.Column="1" Grid.Row="2">Питание</TextBlock>
-        <TextBox  Grid.Column="2" Grid.Row="2"
-                  Text="{Binding Eat}">
-            <TextBox.Styles>
-                <Style Selector="DataValidationErrors">
-                    <Setter Property="Template" Value="{DynamicResource TooltipDataValidationContentTemplate}" />
-                    <Setter Property="ErrorTemplate" Value="{DynamicResource TooltipDataValidationErrorTemplate}" />
-                </Style>
-            </TextBox.Styles>
-        </TextBox>
-        <Button Grid.Column="3" Grid.Row="2" 
-                Command="{Binding SumEatCommand}">✓</Button>
-        <TextBlock  Grid.Column="5" Grid.Row="2" 
-                    Text="{Binding ResEat}"></TextBlock>
+            <TextBlock Text="Категория"/>
 
-        <TextBlock Grid.Column="1" Grid.Row="4">Транспорт</TextBlock>
-        <TextBox  Grid.Column="2" Grid.Row="4"
-                  Text="{Binding Transport}">
-            <TextBox.Styles>
-                <Style Selector="DataValidationErrors">
-                    <Setter Property="Template" Value="{DynamicResource TooltipDataValidationContentTemplate}" />
-                    <Setter Property="ErrorTemplate" Value="{DynamicResource TooltipDataValidationErrorTemplate}" />
-                </Style>
-            </TextBox.Styles>
-        </TextBox>
-        <Button Grid.Column="3" Grid.Row="4"
-                Command="{Binding SumTransportCommand}">✓</Button>
-        <TextBlock  Grid.Column="5" Grid.Row="4"
-                    Text="{Binding ResTransport}"></TextBlock>
+            <ComboBox Items="{Binding Categories}" Width="300"
+                      HorizontalAlignment="Center" PlaceholderText="Веберите нужный пункт"
+                      HorizontalContentAlignment="Center"
+                      SelectedItem="{Binding SelectedCategory}"/>
 
-        <TextBlock Grid.Column="1" Grid.Row="6">Жилье</TextBlock>
-        <TextBox  Grid.Column="2" Grid.Row="6"
-                  Text="{Binding Home}">
-            <TextBox.Styles>
-                <Style Selector="DataValidationErrors">
-                    <Setter Property="Template" Value="{DynamicResource TooltipDataValidationContentTemplate}" />
-                    <Setter Property="ErrorTemplate" Value="{DynamicResource TooltipDataValidationErrorTemplate}" />
-                </Style>
-            </TextBox.Styles>
-        </TextBox>
-        <Button Grid.Column="3" Grid.Row="6"
-                Command="{Binding SumHomeCommand}">✓</Button>
-        <TextBlock  Grid.Column="5" Grid.Row="6"
-                    Text="{Binding ResHome}"></TextBlock>
+            <TextBlock Text="Описание"/>
+            <TextBox Text="{Binding Description}" Width="300"
+                     TextWrapping="WrapWithOverflow" Height="80"/>
 
-        <TextBlock Grid.Column="1" Grid.Row="8">Услуги</TextBlock>
-        <TextBox  Grid.Column="2" Grid.Row="8"
-                  Text="{Binding Services}">
-            <TextBox.Styles>
-                <Style Selector="DataValidationErrors">
-                    <Setter Property="Template" Value="{DynamicResource TooltipDataValidationContentTemplate}" />
-                    <Setter Property="ErrorTemplate" Value="{DynamicResource TooltipDataValidationErrorTemplate}" />
-                </Style>
-            </TextBox.Styles>
-        </TextBox>
-        <Button Grid.Column="3" Grid.Row="8"
-                Command="{Binding SumServicesCommand}">✓</Button>
-        <TextBlock  Grid.Column="5" Grid.Row="8"
-                    Text="{Binding ResServices}"></TextBlock>
-
-        <TextBlock Grid.Column="1" Grid.Row="10">Отдых</TextBlock>
-        <TextBox  Grid.Column="2" Grid.Row="10"
-                  Text="{Binding Relaxation}">
-            <TextBox.Styles>
-                <Style Selector="DataValidationErrors">
-                    <Setter Property="Template" Value="{DynamicResource TooltipDataValidationContentTemplate}" />
-                    <Setter Property="ErrorTemplate" Value="{DynamicResource TooltipDataValidationErrorTemplate}" />
-                </Style>
-            </TextBox.Styles>
-        </TextBox>
-        <Button Grid.Column="3" Grid.Row="10"
-                Command="{Binding SumRelaxationCommand}">✓</Button>
-        <TextBlock  Grid.Column="5" Grid.Row="10"
-                    Text="{Binding ResRelax}"></TextBlock>
-
-        <TextBlock Grid.Column="1" Grid.Row="12">Прочее</TextBlock>
-        <TextBox  Grid.Column="2" Grid.Row="12"
-                  Text="{Binding Other}">
-            <TextBox.Styles>
-                <Style Selector="DataValidationErrors">
-                    <Setter Property="Template" Value="{DynamicResource TooltipDataValidationContentTemplate}" />
-                    <Setter Property="ErrorTemplate" Value="{DynamicResource TooltipDataValidationErrorTemplate}" />
-                </Style>
-            </TextBox.Styles>
-        </TextBox>
-        <Button Grid.Column="3" Grid.Row="12"
-                Command="{Binding SumOtherCommand}">✓</Button>
-        <TextBlock  Grid.Column="5" Grid.Row="12"
-                    Text="{Binding ResOther}"></TextBlock>
-
-
-        <TextBlock Grid.Column="8" Grid.Row="12">Доход</TextBlock>
-        <TextBox  Grid.Column="9" Grid.Row="12"
-                  Text="{Binding Income}">
-            <TextBox.Styles>
-                <Style Selector="DataValidationErrors">
-                    <Setter Property="Template" Value="{DynamicResource TooltipDataValidationContentTemplate}" />
-                    <Setter Property="ErrorTemplate" Value="{DynamicResource TooltipDataValidationErrorTemplate}" />
-                </Style>
-            </TextBox.Styles>
-        </TextBox>
-        <Button Grid.Column="10" Grid.Row="12"
-                Command="{Binding SumIncomeCommand}">✓</Button>
-        <TextBlock  Grid.Column="12" Grid.Row="12"
-                    Text="{Binding ResIncome}"
-                    Foreground="LawnGreen"
-                    FontSize="24"></TextBlock>
-
-
-        <TextBlock Grid.Column="1" Grid.Row="14"
-                   FontSize="20" VerticalAlignment="Center">Итогo:</TextBlock>
-
-        <TextBlock Grid.Column="5" Grid.Row="14"
-                   Text="{Binding TotalMoney}"
-                   Foreground="Crimson"
-                   FontSize="24"></TextBlock>
-
-        <TextBlock Grid.Column="8" Grid.Row="14"
-        FontSize="20" VerticalAlignment="Center">Разница:</TextBlock>
-
-        <TextBlock Grid.Column="12" Grid.Row="14"
-                   Text="{Binding Difference}"
-                   FontSize="24"></TextBlock>
-
-        <Button  Grid.Column="5" Grid.ColumnSpan="2"
-                 Grid.Row="16" Grid.RowSpan="2"
-                 FontSize="17"
-                 Width="110" ToolTip.Tip="Очистить все поля"
-                 VerticalAlignment="Center"
-                 HorizontalAlignment="Center"
-                 Command="{Binding ClearDataCommand}"
-                 Content="Сбросить"/>
-
-        <Button Grid.Column="7" Grid.ColumnSpan="2"
-                Grid.Row="16" Grid.RowSpan="2"
-                FontSize="17"
-                Width="110" ToolTip.Tip="Сохранить данные в таблицу"
-                VerticalAlignment="Center"
-                HorizontalAlignment="Center"
-                Command="{Binding SaveDatasCommand}"
-                Content="Сохранить"/>
-
-        <Image Source="{Binding CurrentImage}" Grid.Row="4" Grid.Column="8"
-               Grid.ColumnSpan="4" Grid.RowSpan="4"
-               Height="450" Width="450"/>
-
+            <Button Command="{Binding AddValue}"
+                    Content="Добавить"
+                    ToolTip.Tip="Добавить указанную сумму к общим расходам"/>
+            
+        </StackPanel>
     </Grid>
 
 </UserControl>
