--- a/Organizer/Views/FinanceCalculateView.axaml
+++ b/Organizer/Views/FinanceCalculateView.axaml
@@ -7,10 +7,6 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Organizer.Views.FinanceCalculateView">
 
-    <!--<UserControl.DataContext>
-        <vm:FinanceCalculateViewModel/>
-    </UserControl.DataContext>-->
-
     <UserControl.Styles>
         <Style Selector="TextBlock">
             <Setter Property="VerticalAlignment" Value="Center"/>
@@ -47,7 +43,7 @@
 
             <TextBlock Text="Категория"/>
 
-            <ComboBox Items="{Binding Categories}" Width="300"
+            <ComboBox ItemsSource="{Binding Categories}" Width="300"
                       HorizontalContentAlignment="Center"
                       HorizontalAlignment="Center"
                       PlaceholderText="Выберите нужный пункт"
